# CenzontLLM

./: ARCHITECTURE.md  Dockerfile  README.md  guion_podcast.md  pyproject.toml
examples/attentionIsAllYouNeed/: guion_podcast.md  paper_content.json
src/cenzontllm/: main.py
src/cenzontllm/guionizador/: config.py  graph.py  mocks.py  prompts.py
src/cenzontllm/guionizador/agents/: base.py  guest.py  host.py  writer.py
src/cenzontllm/input_processor/: extractor.py  figure_captioner.py  metadata.py  pipeline.py  section_detector.py
