[tool.poetry]
name = "cenzontllm"
version = "0.1.0"
description = "Framework para generar podcasts científicos en español desde papers"
authors = ["Isaac Nieto <isaac_jnieto@ciencias.unam.mx>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = {extras = ["all"], version = "^0.12"}
pydantic = "^2.8"
pydantic-settings = "^2.4"
rich = "^13.7"
pymupdf = "^1.24"
unstructured = {version = "^0.15", extras = ["all-docs"]}
pdf2image = "^1.17"
pytesseract = "^0.3.13"
pillow = "^10.4"
tqdm = "^4.66"
pdfminer-six = {version = "==20240706"}
langgraph = "^0.2.28"
langchain-core = "^0.3"
groq = "^0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

